Bug fix: need an --add-opens