@@ -30,6 +30,32 @@
         <pluginManagement>
           <plugins>
             <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>2.21.0</version>
+              <configuration>
+                <argLine>${test.jdk8.argline}</argLine>
+              </configuration>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-failsafe-plugin</artifactId>
+              <version>2.17</version>
+              <configuration>
+                <argLine>${test.jdk8.argline}</argLine>
+              </configuration>
+              <executions>
+                <execution>
+                  <!-- Check that Proguard isn't breaking anything -->
+                  <id>test</id>
+                  <phase>integration-test</phase>
+                  <goals>
+                    <goal>integration-test</goal>
+                  </goals>
+                </execution>
+              </executions>
+            </plugin>
+            <plugin>
               <groupId>com.github.wvengen</groupId>
               <artifactId>proguard-maven-plugin</artifactId>
               <version>2.0.14</version>
@@ -168,6 +194,8 @@
     <guava.version>25.0</guava.version>
     <powermock.version>2.0.0-beta.5</powermock.version>
     <mockito.version>2.19.0</mockito.version>
+    <test.jdk8.argline> </test.jdk8.argline>
+    <test.jdk9.argline>--add-opens java.xml/jdk.xml.internal=ALL-UNNAMED</test.jdk9.argline>
   </properties>
   <groupId>io.github.pr0methean.betterrandom</groupId>
   <artifactId>BetterRandom</artifactId>
@@ -367,6 +395,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.21.0</version>
           <configuration>
+            <argLine>${test.jdk9.argline}</argLine>
             <suiteXmlFiles>
               <suiteXmlFile>src/test/testng.xml</suiteXmlFile>
             </suiteXmlFiles>
@@ -390,6 +419,7 @@
           <artifactId>maven-failsafe-plugin</artifactId>
           <version>2.17</version>
           <configuration>
+            <argLine>${test.jdk9.argline}</argLine>
             <suiteXmlFiles>
               <suiteXmlFile>src/test/testng.xml</suiteXmlFile>
             </suiteXmlFiles>
